# pynxtools-igor

./: pyproject.toml
pynxtools_igor/: reader.py
